[project]
name = "myapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Viswesh balaji V s",email = "visweshbalaji.vs2024cce@sece.ac.in"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
